neighbor ivecs